--- a/01-Dev-Tools-And-Workflow/first-exercise/_config.yml
+++ b/01-Dev-Tools-And-Workflow/first-exercise/_config.yml
@@ -24,16 +24,17 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+destination: docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-facebook_username_pesho: Peter Grigorov
 facebook_url_pesho: https://www.facebook.com/vekr0w
-github_username_pesho:  vekr0w
 github_url_pesho: https://github.com/vekr0w
-facebook_username_kamen: Kamen Yanakiev
+softuni_url_pesho: https://softuni.bg/users/profile/show/peter_grigorov
+linkedin_url_pesho: https://www.linkedin.com/in/petar-grigorov-5305b1161/
 facebook_url_kamen: https://www.facebook.com/profile.php?id=100010155043105
-github_username_kamen:  kamenyanakiev
 github_url_kamen: https://github.com/kamenyanakiev
+softuni_url_kamen: https://softuni.bg/users/profile/show/kamen.yanakiev
+linkedin_url_kamen: https://www.linkedin.com/in/kamen-yanakiev-32874b191/
 
 # Build settings
 plugins:
